--- a/src/_layouts/barebones.html
+++ b/src/_layouts/barebones.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>{{ site.title }}</title>
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.keywords }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
