--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -13,8 +13,8 @@ $less-black: #575757;
 $black: #353535;
 $almost-black: #111111;
 $off-white: #eaeaea;
-$offer-white: #aaaaaa;
-$offerer-white: #dadada;
+$offer-white: #dadada;
+$offerer-white: #cacaca;
 
 $slate: #a5a5a5;
 
