--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -3,20 +3,23 @@ $title-font-stack: Serif;
 $monospace-font-stack: "Ubuntu Mono",monospace;
 $subtitle-font-stack: Serif;
 
-$text-color: #353535;
-$light-text: #696969;
-$link-color: #6060F0;
-$link-color-hover: #4040C0;
-$accent-color: #d9475a;
+$text-color: #eaeaea;
+$light-text: #cacaca;
+$link-color: #88f;
+$accent-color: #FFAA1C;
+$complement-color: #592C84;
+$complement-color2: #006B2D;
 $dark-red: #802e3a;
 $less-black: #575757;
 $black: #353535;
 $almost-black: #111111;
 $off-white: #eaeaea;
-$offer-white: #dadada;
+$offer-white: #bababa;
 $offerer-white: #cacaca;
 
-$slate: #a5a5a5;
+$background: #202020;
+
+$slate: #393b44;
 
 $small-screen: 767px;
 $medium-screen: 992px;
