Change some fonts. Actually add config update

--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -1,4 +1,4 @@
-$font-stack: 'Ubuntu', sans-serif;
+$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $title-font-stack: Serif;
 $monospace-font-stack: "Ubuntu Mono",monospace;
 $subtitle-font-stack: Serif;
