Add TOC support if needed
Big upcoming blog post definitely needs TOC

--- a/src/_layouts/barebones.html
+++ b/src/_layouts/barebones.html
@@ -58,6 +58,12 @@
       !-->
     </ul>
     </nav>
+    {% if page.toc %}
+    <div class="toc-block">
+      <h3> Table of Contents </h3>
+      {% toc %}
+    </div>
+    {% endif %}
   </div>
   <div class="content">
     {% if page.title %}
