--- a/src/assets/css/application.scss
+++ b/src/assets/css/application.scss
@@ -18,7 +18,7 @@ body {
   @include respond-to("small") {
     width: 20em;
     position: fixed;
-    height: 100%;
+    height: 100vh;
     border-right: 2px solid $complement-color;
     padding-left: 1.5em;
   }
@@ -43,7 +43,13 @@ nav {
   ul {
     list-style: none;
   }
+}
 
+nav, .toc-block {
+  li {
+    display: inline-block;
+    min-width: 51%;
+  }
   a {
     margin: 0;
     padding: 0;
@@ -167,4 +173,12 @@ img {
   padding: 0.5em;
   border-radius: 1em;
   max-width: 90%;
+}
+
+.toc-block {
+  height: 50%;
+  #toc {
+    overflow-y: auto;
+    height: 100%;
+  }
 }
