--- a/src/assets/css/application.scss
+++ b/src/assets/css/application.scss
@@ -214,3 +214,19 @@ table {
     border-bottom: 1px solid $complement-color;
   }
 }
+
+.track {
+  padding: 1em;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  audio {
+    width: 100%;
+  }
+  p {
+    margin-top: 0.1em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
