--- a/src/_layouts/barebones.html
+++ b/src/_layouts/barebones.html
@@ -35,13 +35,13 @@
       <h1> <a href="/">Evan Typanski</a></h1>
       <ul class="profiles prompt-out">
       <li> Github:
-        <a href="https://github.com/evantypanski" target="_blank">
-          evantypanski
+        <a href="https://github.com/{{site.github_username}}" target="_blank">
+          {{site.github_username}}
         </a>
       </li>
       <li> Email:
-        <a href="mailto:evantypanski@gmail.com">
-        evantypanski@gmail.com
+        <a href="mailto:{{site.email}}">
+          {{site.email}}
         </a>
       </li>
       <!--
