--- a/src/_layouts/barebones.html
+++ b/src/_layouts/barebones.html
@@ -3,9 +3,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ site.title }}</title>
-    <meta name="description" content="{{ site.description }}">
-    <meta name="keywords" content="{{ site.keywords }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 
@@ -17,6 +14,9 @@
     <meta name="apple-mobile-web-app-title" content="MyWebSite" />
     <link rel="manifest" href="/assets/favicons/site.webmanifest" />
     <link rel="stylesheet" href="/assets/css/application.css">
+
+    {% feed_meta %}
+    {% seo %}
   </head>
 
   <body>
