Add Flipper into hardware p1

--- a/src/_includes/series.html
+++ b/src/_includes/series.html
@@ -12,4 +12,8 @@
     </li>
     {% endfor %}
   </ol>
+
+  {% if include.incomplete %}
+  <p> This series is incomplete! Stay tuned for more :) </p>
+  {% endif %}
 </div>
